src/test/java/com/syntaxerror/pensum/PensumApplicationTests.java
package com.syntaxerror.pensum;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class PensumApplicationTests {

	@Test
	void contextLoads() {
	}

}
